--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "express": "^4.13.3",
     "mongodb": "^2.1.6",
     "aws-sdk": "2.x",
-    "ejs": "2.x"
+    "ejs": "2.x",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "passport-jwt": "~0.1.6",
+    "connect-flash": "~0.1.1",
+    "bcrypt-nodejs": "latest",
+    "express-session": "~1.0.0"
   }
 }
