--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "ejs": "2.x",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
-    "passport-jwt": "~0.1.6",
     "connect-flash": "~0.1.1",
     "bcrypt-nodejs": "latest",
     "express-session": "~1.0.0",
     "mongoose": "~3.8.1",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.0",
-    "method-override": "~1.0.0",
+    "method-override": "~1.0.0"
   }
 }
