--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "express": "^4.13.3",
-    "mongodb": "^2.1.6",
     "aws-sdk": "2.x",
-    "ejs": "2.x",
-    "passport": "~0.1.17",
-    "passport-local": "~0.1.6",
-    "connect-flash": "~0.1.1",
     "bcrypt-nodejs": "latest",
-    "express-session": "~1.0.0",
-    "mongoose": "~3.8.1",
-    "morgan": "~1.0.0",
+    "body-parser": "^1.15.2",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
-    "method-override": "~1.0.0"
+    "ejs": "2.x",
+    "express": "^4.14.0",
+    "express-session": "~1.0.0",
+    "jsonwebtoken": "^7.2.1",
+    "method-override": "~1.0.0",
+    "mongodb": "^2.1.6",
+    "mongoose": "^3.8.40",
+    "morgan": "^1.0.1",
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6"
   }
 }
