--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "babel-node app.js"
   },
   "dependencies": {
-    "aws-sdk": "2.x",
-    "bcrypt-nodejs": "latest",
-    "body-parser": "^1.15.2",
-    "connect-flash": "~0.1.1",
-    "cookie-parser": "~1.0.0",
-    "ejs": "2.x",
-    "express": "^4.14.0",
-    "express-session": "~1.0.0",
     "jsonwebtoken": "^7.2.1",
-    "method-override": "~1.0.0",
-    "mongodb": "^2.1.6",
-    "mongoose": "^3.8.40",
-    "morgan": "^1.0.1",
-    "passport": "~0.1.17",
-    "passport-local": "~0.1.6"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongodb": "^2.2.21",
+    "aws-sdk": "2.x",
+    "ejs": "2.x",
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
+    "passport-jwt": "~2.2.1",
+    "connect-flash": "~0.1.1",
+    "bcrypt-nodejs": "latest",
+    "express-session": "~1.14.2",
+    "mongoose": "~4.7.7",
+    "morgan": "~1.7.0",
+    "cookie-parser": "~1.4.3",
+    "method-override": "~2.3.7",
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0"
   }
 }
