--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "method-override": "~2.3.7",
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0"
+    "babel-preset-stage-2": "^6.18.0",
+    "mongoose-unique-validator": "latest",
+    "dotenv": "latest"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0"
