--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "babel-node app.js"
   },
   "dependencies": {
+    "jwt-simple": "latest",
     "jsonwebtoken": "^7.2.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
